[project]
name = ""
version = "0.1.0"
description = ""
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]
lint = [
    "ruff>=0.14.9",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.3",
]

[tool.mypy]
strict = true
check_untyped_defs = true
follow_untyped_imports = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
force-exclude = true
line-length = 79
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false